[lworld] C2 compilation fails with "assert(!target->is_ready()) failed: our arrival must be expected"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • repo-valhalla
    • Affects Version/s: repo-valhalla
    • Component/s: hotspot

      # Internal Error (/scratch/opt/mach5/mesos/work_dir/slaves/c4ee7e63-1ded-4e8c-9581-ce26f27e3af4-S299/frameworks/14a03e04-9f3c-408e-8ddf-efd6aa9b759f-0005/executors/2f9e91c6-1c77-4655-b20d-4c442e431661/runs/3343e226-074a-4547-9f6a-7391f2345658/workspace/open/src/hotspot/share/opto/parse1.cpp:1670), pid=12414, tid=12431
      # assert(!target->is_ready()) failed: our arrival must be expected

      Current CompileTask:
      C2: 36305 5546 b java.io.ObjectInputStream::checkResolve (86 bytes)

      Stack: [0x00007f362823a000,0x00007f362833b000], sp=0x00007f36283379f0, free space=1014k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x193dd13] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x2c3
      V [libjvm.so+0x193eadf] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
      V [libjvm.so+0xb7f7a0] report_vm_error(char const*, int, char const*, char const*, ...)+0x100
      V [libjvm.so+0x158e583] Parse::merge(int)+0x1b3
      V [libjvm.so+0x158ef08] Parse::do_one_block()+0x938
      V [libjvm.so+0x158fef1] Parse::do_all_blocks()+0xe1
      V [libjvm.so+0x1593e59] Parse::Parse(JVMState*, ciMethod*, float)+0xe49
      V [libjvm.so+0x8850cc] ParseGenerator::generate(JVMState*)+0x8c
      V [libjvm.so+0xa98ebb] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xaab
      V [libjvm.so+0x8831c1] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xd1
      V [libjvm.so+0xaa66d9] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x409
      V [libjvm.so+0xaa76f7] CompileBroker::compiler_thread_loop()+0x367
      V [libjvm.so+0x1853397] JavaThread::thread_main_inner()+0x2c7
      V [libjvm.so+0x18536ca] JavaThread::run()+0x22a
      V [libjvm.so+0x1530d60] thread_native_entry(Thread*)+0x100

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: