8210646: [lworld] C2 compilation fails with "assert(!target->is_ready()) failed: our arrival must be expected"

Reviewed-by: roland